@@ -62,3 +62,4 @@
 - Se eliminan los métodos getLegendURL/setLegendURL de WMTS para que hereden de Layer.
 - En WFS eliminado extract, junto con su getter y setter, ya que los hereda de Vector y la funcionalidad es la misma.
 - En response añadida comprobación extra de que la respuesta es correcta.
+- Se renombra oldOL3Layer, ahora es oldLayer.
